Убрал поддержку lombook и привел (частично) код в более-менее пристойный вид